[gd_scene load_steps=11 format=3 uid="uid://b48l7ear8lc3v"]

[ext_resource type="Script" path="res://Scripts/Main_Menu.gd" id="1_3bgtc"]
[ext_resource type="FontFile" uid="uid://d3jmy4hwjbvtr" path="res://UI/Fonts/Dream MMA.ttf" id="2_mf2qj"]
[ext_resource type="Theme" uid="uid://djaw4fh85h3dy" path="res://UI/Script/MainMenu.tres" id="2_qkyvr"]
[ext_resource type="AudioStream" uid="uid://cq7tu4jokf8yq" path="res://Sound Effects/sound (1).wav" id="5_teicj"]
[ext_resource type="PackedScene" uid="uid://bu4cdw2810wuu" path="res://UI/Scenes/Setting/settings_page.tscn" id="6_dqa8t"]
[ext_resource type="AudioStream" uid="uid://bglghu5jcsi3m" path="res://Sound Effects/click.wav" id="6_kgt8m"]

[sub_resource type="Shader" id="Shader_4nxkh"]
code = "/*
	動的電子背景シェーダー by あるる（きのもと 結衣） @arlez80
	Procedural Electric Background Shader by Yui Kinomoto @arlez80

	MIT License
*/
shader_type canvas_item;

uniform vec4 background_color : source_color = vec4( 0.0, 0.0, 0.0, 1.0 );
uniform vec4 line_color : source_color = vec4( 0.0, 1.0, 1.0, 1.0 );
uniform float line_freq = 9.56;
uniform float height = 0.6;
uniform float speed = 0.8;
uniform vec2 scale = vec2( 2.0, 16.0 );

void fragment( )
{
	vec2 uv = UV * scale;
	float shift = cos( floor( uv.y ) );
	uv.x += shift;

	float freq = clamp( cos( uv.x * line_freq ) * 3.0, 0.0, 1.0 ) * height;
	float line = 1.0 - clamp( abs( freq - mod( uv.y, 1.0 ) ) * 11.0, 0.0, 1.0 );

	COLOR = mix( background_color, line_color, line * mod( uv.x - TIME * speed * abs( shift ), 1.0 ) /*  * mod( TIME + shift, 1.0 ) */ );
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gqx03"]
shader = SubResource("Shader_4nxkh")
shader_parameter/background_color = Color(0, 0, 0, 1)
shader_parameter/line_color = Color(0.96642, 0, 0.118742, 1)
shader_parameter/line_freq = 11.73
shader_parameter/height = 0.6
shader_parameter/speed = 0.16
shader_parameter/scale = Vector2(1.255, 16.815)

[sub_resource type="Gradient" id="Gradient_xq3q3"]
offsets = PackedFloat32Array(0, 0.225146, 0.467836, 0.719298, 0.836257)
colors = PackedColorArray(0.203696, 0.0980686, 0.102808, 0.0189694, 0.611556, 0.221189, 0.220919, 0.255495, 0.635294, 0.00392157, 0, 0.564706, 0.496234, 0.261505, 0.268187, 0.254902, 0.601633, 0.342579, 0.349533, 0.100501)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sh3xe"]
gradient = SubResource("Gradient_xq3q3")
fill_from = Vector2(0.52, 1.034)
fill_to = Vector2(0.5, 0.2)
metadata/_snap_enabled = true
metadata/_snap_count = 25

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bgtc")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_gqx03")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.0901961, 0.0901961, 0.278431)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_sh3xe")

[node name="Margin Play" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = 3.0
offset_right = 114.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Margin Play"]
layout_mode = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="Play" type="Button" parent="Margin Play/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qkyvr")
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("2_mf2qj")
theme_override_font_sizes/font_size = 56
text = "play"
flat = true
metadata/_edit_lock_ = true

[node name="Margin Quit" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = 159.735
offset_right = 103.5
offset_bottom = 223.735
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Margin Quit"]
layout_mode = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="Quit" type="Button" parent="Margin Quit/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_qkyvr")
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("2_mf2qj")
theme_override_font_sizes/font_size = 56
text = "quit "
flat = true
metadata/_edit_lock_ = true

[node name="Marging Setting" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = 85.58
offset_right = 200.0
offset_bottom = 149.58
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Marging Setting"]
layout_mode = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="Settings" type="Button" parent="Marging Setting/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_qkyvr")
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("2_mf2qj")
theme_override_font_sizes/font_size = 56
text = "settings"
flat = true

[node name="Audio" type="Node2D" parent="."]

[node name="Hover" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("5_teicj")
volume_db = 10.0
panning_strength = 0.0
bus = &"SoundEffects"

[node name="Select" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("6_kgt8m")
volume_db = 5.66
pitch_scale = 1.19
panning_strength = 0.0
bus = &"SoundEffects"

[node name="Settings_Page" parent="." instance=ExtResource("6_dqa8t")]
visible = false
layout_mode = 1

[connection signal="mouse_entered" from="Margin Play/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="Margin Play/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Margin Quit/VBoxContainer2/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Margin Quit/VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="Marging Setting/VBoxContainer2/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="Marging Setting/VBoxContainer2/Settings" to="." method="_on_settings_pressed"]
